<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/activity_client_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="35dp"
        android:text="@string/activity_client_infos_client"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14dip" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:minWidth="200dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_client_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12dip" />

        <EditText
            android:id="@+id/activity_client_name_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_client_prenom"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12dip" />

        <EditText
            android:id="@+id/activity_client_prenom_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="15dp"
        android:text="@string/activity_client_infos_voiture"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14dip" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:minWidth="250dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_client_carrosserie_msg"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12dip" />

        <Spinner
            android:id="@+id/activity_client_carrosserie_spin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <!-- Preview: listitem=@android:layout/simple_spinner_item -->
        </Spinner>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_client_model_msg"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12dip" />

        <EditText
            android:id="@+id/activity_client_model_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_client_description_voiture"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12dip" />

        <EditText
            android:id="@+id/activity_client_description_voiture_edit"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:ems="10"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="25dp" >
    </LinearLayout>

    <Button
        android:id="@+id/activity_client_button_continuer"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/activity_client_button_continuer_msg" />

    

</RelativeLayout>