<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_parck_titlte"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/activity_fabrication_new_voiture_msg" />

            <TextView
                android:id="@+id/activity_fabrication_new_voiture_client_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/activity_fabrication_new_voiture_client_prenom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <ListView
            android:id="@+id/activity_parck_listview_new_voiture"
            android:layout_width="match_parent"
            android:layout_height="109dp" >

        </ListView>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_parck_list_voiture_fabriquer" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/activity_parck_button_retour_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/activity_parck_button_retour" />

    <ListView
        android:id="@+id/activity_parck_listview_listvoiture"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:layout_above="@+id/activity_parck_button_retour_id"
        android:layout_alignParentLeft="true" >
    </ListView>

</RelativeLayout>